public/css/extra.css
@font-face {
  font-family: "8bitOperator";
  src: url(../include/8_bit_Operator+_Regular.ttf);
  font-weight: normal;
}

@font-face {
  font-family: "8bitOperator";
  src: url(../include/8_bit_Operator+_Bold.ttf);
  font-weight: bold;
}


:root > * {
  --md-typeset-a-color:   #28743c;
}

[data-md-color-scheme="default"] {
  --md-primary-bg-color:  #e6eede;
  --md-typeset-a-color:   #28743c;
}

[data-md-color-scheme="slate"] {
  --md-primary-fg-color:  #3AAC59;
  --md-accent-fg-color:   #3AAC59;
  --md-primary-bg-color:  #c5e1a5;
  --md-typeset-a-color:   #28743c;
}

[data-md-color-accent="chiania"] {
  --md-typeset-a-color:   #28743c;
  --md-default-fg-color:  #c5e1a5;
}


[data-md-color-primary="black"] {
  --md-typeset-a-color:   #28743c;
}


body {
  font-family: "8bitOperator";
  font-size: 1em;
  
}

/*
.wy-nav-content {
    max-width: 1600px;
}
*/


.md-grid {
    /*max-width: 1600px;*/
    max-width: 90%;
}

.md-header {
  background-image: url("../include/background-overgrown-temple-pixelated-cropped.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: 50% 0px;
  height:97px;
}

.md-container {
  scroll-margin-top: 3em;
}

.md-ellipsis {
  text-shadow: 1px 1px var(--md-accent-fg-color);
  font-weight: bold;
  font-size:1.4em;
}

.md-footer__title .md-ellipsis {
  color: var(--md-default-bg-color);
}

.md-header__button.md-logo :-webkit-any(img,svg) {
    height: 4rem;
}

.md-header__button.md-logo img {
    position: relative;
    top: -8px;
    height: 4rem;
}

.md-tabs {
  box-shadow: 0 0 0.2rem rgb(0 0 0 / 10%), 0 0.2rem 0.4rem var(--md-typeset-table-color);
  transition: transform .25s cubic-bezier(.1,.7,.1,1),box-shadow .25s;
  background-image: url("../include/background-overgrown-temple-pixelated-cropped.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: 50% 0px;
  text-shadow: 2px 2px 2px var(--md-accent-fg-color);
  font-weight: bold;
  
}


[data-md-color-scheme=default] .md-tabs__link {
  color: var(--md-default-fg-color);
}

[data-md-color-scheme=default] .md-header .md-ellipsis {
  color: var(--md-default-fg-color);
}

[data-md-color-scheme=chiania_dark] .md-tabs__link {
  color: #c5e1a5;;
}

[data-md-color-scheme=chiania_dark] .md-ellipsis {
  color: #c5e1a5;;
}

.md-tabs__list{
  background-color: var(--md-default-bg-color--lighter);
}

.md-tabs__link {
  font-size: 0.9rem;
}

.md-header--shadow {
  box-shadow: 0 0 0.2rem rgb(0 0 0 / 10%), 0 0.2rem 0.4rem var(--md-typeset-table-color);
  transition: transform .25s cubic-bezier(.1,.7,.1,1),box-shadow .25s;
}

:root > * {
  --md-primary-fg-color:        #3AAC59;
  --md-accent-fg-color:        #3AAC59;

/*  --md-primary-fg-color--light: #ECB7B7;
  --md-primary-fg-color--dark:  #90030C;*/
}

[data-md-color-scheme="default"] {
  --md-primary-bg-color:  #c5e1a5;
  --md-typeset-a-color:   #28743c;
}

html {
  scroll-behavior: smooth;
}

.md-typeset :target {
  --md-scroll-margin:6rem;
}

[data-md-color-scheme=chiania_dark] {
  --md-scroll-margin:5rem;
  --md-hue: 232;
  --md-default-fg-color: hsla(var(--md-hue),75%,95%,1);
  --md-default-fg-color--light: hsla(var(--md-hue),75%,90%,0.62);
  --md-default-fg-color--lighter: hsla(var(--md-hue),75%,90%,0.32);
  --md-default-fg-color--lightest: hsla(var(--md-hue),75%,90%,0.12);
  --md-default-bg-color: hsla(var(--md-hue),15%,21%,1);
  --md-default-bg-color--light: hsla(var(--md-hue),15%,21%,0.54);
  --md-default-bg-color--lighter: hsla(var(--md-hue),15%,21%,0.26);
  --md-default-bg-color--lightest: hsla(var(--md-hue),15%,21%,0.07);
  --md-code-fg-color: hsla(var(--md-hue),18%,86%,1);
  --md-code-bg-color: hsla(var(--md-hue),15%,15%,1);
  --md-code-hl-color: rgba(66,135,255,.15);
  --md-code-hl-number-color: #e6695b;
  --md-code-hl-special-color: #f06090;
  --md-code-hl-function-color: #c973d9;
  --md-code-hl-constant-color: #9383e2;
  --md-code-hl-keyword-color: #6791e0;
  --md-code-hl-string-color: #2fb170;
  --md-code-hl-name-color: var(--md-code-fg-color);
  --md-code-hl-operator-color: var(--md-default-fg-color--light);
  --md-code-hl-punctuation-color: var(--md-default-fg-color--light);
  --md-code-hl-comment-color: var(--md-default-fg-color--light);
  --md-code-hl-generic-color: var(--md-default-fg-color--light);
  --md-code-hl-variable-color: var(--md-default-fg-color--light);
  --md-typeset-color: var(--md-default-fg-color);
  --md-typeset-a-color: var(--md-primary-fg-color);
  --md-typeset-mark-color: rgba(66,135,255,.3);
  --md-typeset-kbd-color: hsla(var(--md-hue),15%,94%,0.12);
  --md-typeset-kbd-accent-color: hsla(var(--md-hue),15%,94%,0.2);
  --md-typeset-kbd-border-color: hsla(var(--md-hue),15%,14%,1);
  --md-typeset-table-color: hsla(var(--md-hue),75%,95%,0.12);
  --md-admonition-fg-color: var(--md-default-fg-color);
  --md-admonition-bg-color: var(--md-default-bg-color);
  --md-footer-bg-color: hsla(var(--md-hue),15%,12%,0.87);
  --md-footer-bg-color--dark: hsla(var(--md-hue),15%,10%,1);
  --md-shadow-z1: 0 0.2rem 0.5rem rgba(0,0,0,.2),0 0 0.05rem rgba(0,0,0,.1);
  --md-shadow-z2: 0 0.2rem 0.5rem rgba(0,0,0,.3),0 0 0.05rem rgba(0,0,0,.25);
  --md-shadow-z3: 0 0.2rem 0.5rem rgba(0,0,0,.4),0 0 0.05rem rgba(0,0,0,.35);
}


.gallery {
  object-fit: cover;
  width:23%;
  display: inline;
  padding: 2px;
}

div.lightgallery {
  display: inline;
}

img.game_item {
  width: 250px;
}

@font-face {
  font-family: "8bitOperator";
  src: url(../include/8_bit_Operator+_Regular.ttf);
  font-weight: normal;
}

@font-face {
  font-family: "8bitOperator";
  src: url(../include/8_bit_Operator+_Bold.ttf);
  font-weight: bold;
}

div.chia_rpg_story {
  font-family: "8bitOperator";
  font-size: 1em;
}

div.chia_rpg_story hr {
  clear: both;
}

table.item_table{
  border-collapse: collapse;
  border: 1px solid var(--md-typeset-table-color)
}

table.item_table td{
  min-width: 150px;
  padding:10px;
  border: 1px solid var(--md-typeset-table-color);
}

table.item_table span{
  border: 2px solid var(--md-typeset-table-color);
  padding: 2px;
}

img.black_market {
  max-width:100%;
  border:10px solid var(--md-typeset-table-color);
  width:200px;
  float:left;
  /*
  filter: blur(8px);
  -webkit-filter: blur(8px);
  */
  
}

div.item_thumbnail {
  width:300px; height:500px; 
  float:left;
  margin:10px;
  border: 2px solid var(--md-typeset-table-color);
  overflow-y: auto;
  scrollbar-color: var(--md-typeset-table-color);
  scrollbar-width: thin;
}

div.item_thumbnail::-webkit-scrollbar {
  height: .2rem;
  width: .2rem;
}


div.item_thumbnail div {
  border-top: 2px solid var(--md-typeset-table-color);
  margin-bottom: 2px;
}


div.item_thumbnail_detail {
  width:300px; height:600px; 
  float:left;
  margin:10px;
  border: 2px solid var(--md-typeset-table-color);
  overflow-y: auto;
  scrollbar-color: var(--md-typeset-table-color);
  scrollbar-width: thin;
}

div.item_thumbnail_detail::-webkit-scrollbar {
  height: .2rem;
  width: .2rem;
}


div.item_thumbnail_detail div {
  border-top: 2px solid var(--md-typeset-table-color);
  margin-bottom: 2px;
}

@media (max-width: 699px) {
  img {
    max-width:100%;
  }

  .md-grid {
    /*max-width: 1600px;*/
    max-width: 100%;
  }

  img.game_item {
    max-width: 300px;
    display: block;
    margin: 0 auto;
    
  }

  img.story_pic {
    margin:0em;
    border:10px solid var(--md-typeset-table-color);
    max-width:100%;
  }

  img.full_pic {
    margin:0em;
    border:10px solid var(--md-typeset-table-color);
    max-width:100%;
    display: block;
    margin: 0 auto;
  }

  img.item_pic {
    margin:0em;
    border:10px solid var(--md-typeset-table-color);
    max-width:100%;
  }

  img.story_pic_left {
    display: block;
    margin: 0em;
    border: 10px solid var(--md-typeset-table-color);
    max-width:100%;
  }

  img.story_pic_right {
    display: block;
    margin: 0em;
    border: 10px solid var(--md-typeset-table-color);
    max-width:100%;
  }


  table {
    display: block;
  }
  thead {
    display: none;
  }
  tbody {
    display: table;
  }
  tr {
    display: table-row-group;
  }
  td {
    display: table-row;
    padding: 0px;
  }
  td:before,
  td > span {
    display: table-cell;
  }
  td:before {
    content: attr(data-label);
  }

  table.item_table span{
    border: 2px solid var(--md-typeset-table-color);
    padding: 2px;
    display: inline;
  }

  table.item_table td{
    padding: 0px;
  }

}

@media (min-width: 700px) {

  .md-grid {
    /*max-width: 1600px;*/
    max-width: 90%;
  }

  img.full_pic {
    margin:0em;
    border:10px solid var(--md-typeset-table-color);
    max-width:800px;
  }

  img.story_pic {
    margin:0em;
    border:10px solid var(--md-typeset-table-color);
    max-width:400px;
  }

  img.story_pic_left {
    margin:0em 1em 0em 0em;
    float: left;
    border:10px solid var(--md-typeset-table-color);
    max-width:400px;
  }

  img.story_pic_right {
    margin:0em 0em 0em 1em;
    float: right;
    border:10px solid var(--md-typeset-table-color);
    max-width:400px;
  }

}



/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
.market-box{
  background-color: transparent;
  width: 150px;
  height: 150px;
  /*border: 1px solid #f1f1f1;*/
  perspective: 400px; /* Remove this if you don't want the 3D effect */
  float: left;
  margin: 10px;
}

/* This container is needed to position the front and back side */
.market-box-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 1.5s;
  transform-style: preserve-3d;
}

/* Do an horizontal flip when you move the mouse over the flip box container */
/*
.market-box:hover .market-box-inner {
  transform: rotateY(180deg);
}
*/

/* Position the front and back side */
.market-box-front, .market-box-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}

/* Style the front side (fallback if image is missing) */
.market-box-front {
  background-color: transparent;
  background-image: url("../include/box.png");
  background-size: cover;
  text-align: center;
  color: black;
}

/* Style the back side */
.market-box-back {
  background-color: var(--md-typeset-table-color);
  color: white;
  transform: rotateY(180deg);
}

